# guick

./: .readthedocs.yaml  LICENSE.txt  README.md  pyproject.toml
.github/: funding.yml
.github/workflows/: build-wheels.yml  test.yml
docs/: conf.py  index.rst
docs/_ext/: execute_python_code.py  termynal_ext.py
docs/_static/css/: custom.css  termynal.css
docs/_static/js/: custom.js
src/guick/: __init__.py  gui.py
tests/: conftest.py  test_basic.py  test_colors.py  test_groups.py  test_typer_tutorial.py
