[build-system]
requires = ["setuptools", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[project]
name = "guick"
dynamic = ["version"]
description = "Graphical User Interface for Click"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "click==8.3.1",
    "tomlkit",
]

[tool.setuptools]
license-files = []

[tool.setuptools_scm]
version_file = "src/guick/_version.py"
version_scheme = "no-guess-dev"
local_scheme = 'no-local-version'

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[dependency-groups]
gui = [
    "wxpython",
]
typer = [
    "typer>=0.15.2",
]
dev = [
    "loguru>=0.7.3",
    "pytest>=8.3.4",
    "pytest-mock>=3.14.0",
    "tqdm>=4.67.1",
]
docs = [
    "pydata-sphinx-theme>=0.16.1",
    "sphinx>=7.4.7",
    "sphinx-copybutton>=0.5.2",
    "sphinx-design>=0.6.1",
]
